h2 style and list items

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,10 @@
-p {
+li{
     width: 150px;
     height: 80px;
     background-color: yellow;
     transform: rotate(20deg);
+  }
+
+  h2 {
+    color: red;
   }
